# lua---opencv

./: CMakeLists.txt  affine.lua  init.lua  opencv-0-1.rockspec  opencv.c  opencv.cpp  test.lua  util.lua
generic/: opencv.c  opencv.cpp
